--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^1.2.1",
     "dotenv": "^16.0.3",
+    "mqtt": "^4.3.7",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
