--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.2.1",
     "dotenv": "^16.0.3",
     "mqtt": "^4.3.7",
+    "pinia": "^2.0.35",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
